Change table class to sb-table to avoid conflicts in socialbro

--- a/views/components/tables/simple-table.html
+++ b/views/components/tables/simple-table.html
@@ -1,26 +1,26 @@
-<table class="table third-highlight one-whole">
-  <tr class="table-heading">
-    <th class="table-cell">
-      <span class="table-cell-title">Double line</span>
-      <span class="table-cell-title">Text header</span>
+<table class="sb-table third-highlight one-whole">
+  <tr class="sb-table-heading">
+    <th class="sb-table-cell">
+      <span class="sb-table-cell-title">Double line</span>
+      <span class="sb-table-cell-title">Text header</span>
     </th>
-    <th class="table-cell">Number/Date</th>
-    <th class="table-cell">
-      <span class="table-cell-title">Double line</span>
-      <span class="table-cell-subtitle">Text with subtitle</span>
+    <th class="sb-table-cell">Number/Date</th>
+    <th class="sb-table-cell">
+      <span class="sb-table-cell-title">Double line</span>
+      <span class="sb-table-cell-subtitle">Text with subtitle</span>
     </th>
-    <th class="table-cell">Phrase</th>
+    <th class="sb-table-cell">Phrase</th>
   </tr>
-  <tr class="table-row">
-    <td class="table-cell">Text content</td>
-    <td class="table-cell align-center">100%</td>
-    <td class="table-cell">Delete?</td>
-    <td class="table-cell">It's not done until it ships</td>
+  <tr class="sb-table-row">
+    <td class="sb-table-cell">Text content</td>
+    <td class="sb-table-cell align-center">100%</td>
+    <td class="sb-table-cell">Delete?</td>
+    <td class="sb-table-cell">It's not done until it ships</td>
   </tr>
-  <tr class="table-row">
-    <td class="table-cell"><a href="#">Text link and content</a></td>
-    <td class="table-cell  align-center">1985.19</td>
-    <td class="table-cell">Saved!</td>
-    <td class="table-cell">Get shipping done</td>
+  <tr class="sb-table-row">
+    <td class="sb-table-cell"><a href="#">Text link and content</a></td>
+    <td class="sb-table-cell  align-center">1985.19</td>
+    <td class="sb-table-cell">Saved!</td>
+    <td class="sb-table-cell">Get shipping done</td>
   </tr>
 </table>
