Add cursor helper file

--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -38,6 +38,7 @@ This library is divided in the following sections:
 
 @import "helpers/align";
 @import "helpers/clearfix";
+@import "helpers/cursor";
 @import "helpers/percent";
 @import "helpers/float";
 @import "helpers/is-hidden";
