Add disabled helper

--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -78,6 +78,6 @@ This library is divided in the following sections:
 @import "helpers/white-spacing";
 @import "helpers/font-sizes";
 @import "helpers/avatar";
-
+@import "helpers/disabled";
 
 /* 7. Vendor */
