--- a/views/layout/head.html
+++ b/views/layout/head.html
@@ -12,6 +12,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat' type='text/css'>
-<link rel="stylesheet" href="/stylesheets/sandbox.css" />
+<link rel="stylesheet" href="/stylesheets/main.css" />
 <link rel="stylesheet" href="/stylesheets/docs.css" />
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/github.min.css">
