--- a/views/components/forms/input-groups.html
+++ b/views/components/forms/input-groups.html
@@ -6,6 +6,6 @@
 <div class="input-group">
   <input class="input-base" type="text" placeholder="Message"/>
   <span class="input-group-button">
-    <button class="btn btn-success">Send</button>
+    <button class="btn">Send</button>
   </span>
 </div>
