first code style approach

--- a/public/stylesheets/sandbox.css
+++ b/public/stylesheets/sandbox.css
@@ -1306,7 +1306,8 @@ Clear floats utility.
   clear: both; }
 
 .cursor-pointer {
-  cursor: pointer; }
+  cursor: pointer;
+  pointer-events: none; }
 
 .disabled {
   opacity: 0.5; }
