--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -9,9 +9,18 @@
 
     <nav class="header-navigation">
       <ul>
-        <li class="header-navigation-item {% if page == 'docs' %}active{% endif %}"><a href="/docs/colors">Docs</a></li>
-        <li class="header-navigation-item {% if page == 'guidelines' %}active{% endif %}"><a href="/guidelines">Guidelines</a></li>
-        <li class="header-navigation-item"><a href="https://github.com/socialbro/styleguide" target="_blank">Github</a></li>
+        <li class="header-navigation-item {% if page == 'docs' %}active{% endif %}">
+          <a href="/docs/colors">Docs</a>
+        </li>
+        <li class="header-navigation-item {% if page == 'guidelines' %}active{% endif %}">
+          <a href="/guidelines">Guidelines</a>
+        </li>
+        <li class="header-navigation-item {% if page == 'codestyle' %}active{% endif %}">
+          <a href="/codestyle">Code Style</a>
+        </li>
+        <li class="header-navigation-item">
+          <a href="https://github.com/socialbro/styleguide" target="_blank">Github</a>
+        </li>
       </ul>
     </nav>
   </div>
