--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1854,7 +1854,8 @@ Clear floats utility.
   clear: both; }
 
 .cursor-pointer {
-  cursor: pointer; }
+  cursor: pointer;
+  pointer-events: none; }
 
 .disabled {
   opacity: 0.5; }
