--- a/views/components/breadcrumb/dashboard.html
+++ b/views/components/breadcrumb/dashboard.html
@@ -1,4 +1,4 @@
-<ul class="breadcrumb breadcrumb-home breadcrumb-holder">
+<ul class="breadcrumb breadcrumb-home breadcrumb-with-borders">
   <li class="breadcrumb-item breadcrumb-item-large">
     <div class="media">
       <div class="media-image">
