--- a/sass/styleguide/objects/_breadcrumb.scss
+++ b/sass/styleguide/objects/_breadcrumb.scss
@@ -13,7 +13,7 @@ Breadcrumb in two flavours: normal with arrow shapes and simple.
     overflow: hidden;
 }
 
-.breadcrumb-holder {
+.breadcrumb-with-borders {
     border-radius: 4px;
     border: 1px solid color($name: "text", $variant: "secondary", $hue: "light");
 }
