--- a/views/components/breadcrumb/default.html
+++ b/views/components/breadcrumb/default.html
@@ -1,4 +1,4 @@
-<ul class="breadcrumb breadcrumb-holder">
+<ul class="breadcrumb breadcrumb-with-borders">
   <li class="breadcrumb-item"><a href="#">Home</a></li>
   <li class="breadcrumb-item"><a href="#">Source</a></li>
   <li class="breadcrumb-item"><a href="#">Followers</a></li>
