--- a/public/stylesheets/sandbox.css
+++ b/public/stylesheets/sandbox.css
@@ -373,9 +373,11 @@ Breadcrumb in two flavours: normal with arrow shapes and simple.
 */
 .breadcrumb {
   background-color: white;
-  border-radius: 4px;
-  border: 1px solid #d6d6d6;
   overflow: hidden; }
+
+.breadcrumb-holder {
+  border-radius: 4px;
+  border: 1px solid #d6d6d6; }
 
 .breadcrumb-item {
   background-color: #f6f6f6;
@@ -1306,7 +1308,8 @@ Clear floats utility.
   clear: both; }
 
 .cursor-pointer {
-  cursor: pointer; }
+  cursor: pointer;
+  pointer-events: none; }
 
 .disabled {
   opacity: 0.5; }
