replaces pixels for rems

--- a/sass/styleguide/objects/_tables.scss
+++ b/sass/styleguide/objects/_tables.scss
@@ -14,7 +14,7 @@ $numerals: "first" "second" "third" "fourth" "fifth" "sixth" "seventh" "eigth" "
 }
 
 .sb-table-compacted .sb-table-cell {
-    padding: 5px;
+    padding: .5rem;
 }
 
 .sb-table-heading {
