--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -26,4 +26,46 @@
     </svg>
     <span class="icon-container-name">trash</span>
   </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-credit-card">
+      <use xlink:href="/svg-defs.svg#icon-credit-card"></use>
+    </svg>
+    <span class="icon-container-name">credit-card</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-headphones">
+      <use xlink:href="/svg-defs.svg#icon-headphones"></use>
+    </svg>
+    <span class="icon-container-name">headphones</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-open-envelope">
+      <use xlink:href="/svg-defs.svg#icon-open-envelope"></use>
+    </svg>
+    <span class="icon-container-name">open-envelope</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-plugin">
+      <use xlink:href="/svg-defs.svg#icon-plugin"></use>
+    </svg>
+    <span class="icon-container-name">plugin</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-tools">
+      <use xlink:href="/svg-defs.svg#icon-tools"></use>
+    </svg>
+    <span class="icon-container-name">tools</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-user">
+      <use xlink:href="/svg-defs.svg#icon-user"></use>
+    </svg>
+    <span class="icon-container-name">user</span>
+  </div>
 </div>
