--- a/sass/styleguide/objects/_tabs.scss
+++ b/sass/styleguide/objects/_tabs.scss
@@ -38,10 +38,12 @@ Navigation usually means list of links. And we have some flavours using distinct
     background-color: #f7f7f7;
     border-top: 1px solid color("border");
     display: table-cell;
+    padding: 1.5rem;
     position: relative;
 
     a {
         color: color("text", $hue: "dark");
+        display: block;
     }
 }
 
@@ -61,11 +63,6 @@ Navigation usually means list of links. And we have some flavours using distinct
     top: calc(100% - 1px);
     width: 100%;
     z-index: 2;
-}
-
-.sb-tab a {
-    display: block;
-    padding: 1em;
 }
 
 .sb-tab:first-child {
