--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -68,4 +68,25 @@
     </svg>
     <span class="icon-container-name">user</span>
   </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-nut">
+      <use xlink:href="/svg-defs.svg#icon-nut"></use>
+    </svg>
+    <span class="icon-container-name">nut</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-bell">
+      <use xlink:href="/svg-defs.svg#icon-bell"></use>
+    </svg>
+    <span class="icon-container-name">bell</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-heart">
+      <use xlink:href="/svg-defs.svg#icon-heart"></use>
+    </svg>
+    <span class="icon-container-name">heart</span>
+  </div>
 </div>
