--- a/sass/styleguide/objects/_acc-breadcrumb.scss
+++ b/sass/styleguide/objects/_acc-breadcrumb.scss
@@ -218,6 +218,7 @@ $total-amount-height: 8.8rem;
     display: block;
     font-size: 1.1rem;
     text-transform: uppercase;
+    padding: 0 1rem;
 }
 
 // Total amount shown in the last item
