Add with-caret generic helper

--- a/sass/styleguide/main.scss
+++ b/sass/styleguide/main.scss
@@ -79,5 +79,6 @@ This library is divided in the following sections:
 @import "helpers/no-scroll";
 @import "helpers/percent";
 @import "helpers/white-spacing";
+@import "helpers/with-caret";
 
 /* 7. Vendor */
