--- a/sass/styleguide/objects/_tabs.scss
+++ b/sass/styleguide/objects/_tabs.scss
@@ -202,6 +202,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 .sb-tabs--left .sb-tab:last-child {
     border-top-right-radius: 0;
     border-bottom-left-radius: 4px;
+    border-bottom: 1px solid color("border");
 }
 
 .sb-tabs--left .sb-tab + .sb-tab {
@@ -229,6 +230,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 
 .sb-tabs--right .sb-tab {
     border-right: 1px solid color("border");
+    border-left: 0;
 }
 
 .sb-tabs--right .sb-tab-active:after {
@@ -247,6 +249,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 .sb-tabs--right .sb-tab:last-child {
     border-top-right-radius: 0;
     border-bottom-right-radius: 4px;
+    border-bottom: 1px solid color("border");
 }
 
 .sb-tabs--right .sb-tabs-content {
