--- a/views/components/tabs/block-left.html
+++ b/views/components/tabs/block-left.html
@@ -5,7 +5,7 @@
     <li class="sb-tab"><a href="#/three">Tabs</a></li>
   </ul>
 
-  <div class="sb-tabs-content">
+  <div class="sb-tabs-content sb-tabs-content-active">
     Some text about Light sit amet, consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur. Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq. Tabs , consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq.
   </div>
 </div>
