--- a/views/components/tabs/bottom-center.html
+++ b/views/components/tabs/bottom-center.html
@@ -1,5 +1,5 @@
 <div class="sb-tabs sb-tabs--block-bottom eighty percent mx-auto">
-  <div class="sb-tabs-content">
+  <div class="sb-tabs-content sb-tabs-content-active">
     Some text about Light sit amet, consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur. Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq. Tabs , consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq.
   </div>
   <ul class="sb-tabs-group align-center">
