--- a/views/components/tabs/default.html
+++ b/views/components/tabs/default.html
@@ -4,7 +4,10 @@
     <li class="sb-tab"><a href="#/two">Sexy</a></li>
     <li class="sb-tab"><a href="#/three">Tabs</a></li>
   </ul>
-  <div class="sb-tabs-content">
+  <div class="sb-tabs-content sb-tabs-content-active">
     Some text about Light sit amet, consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur. Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit.
+  </div>
+  <div class="sb-tabs-content">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate in porro doloribus modi aspernatur amet quod libero atque vero? Odit sequi, consequatur assumenda atque error, debitis quaerat dolorem fuga nemo.
   </div>
 </div>
