--- a/views/docs.html
+++ b/views/docs.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <div class="three-quarters column markdown-content">
+  <div class="three-quarters grid-column markdown-content">
     {% markdown "markdown/" + section + ".md" %}
   </div>
 {% endblock %}
