--- a/views/guidelines.html
+++ b/views/guidelines.html
@@ -1,7 +1,7 @@
 {% extends "layout/default.html" %}
 
 {% block main %}
-  <div class="one-whole column markdown-content">
+  <div class="one-whole grid-column markdown-content">
     {% markdown "markdown/guidelines.md" %}
   </div>
 {% endblock %}
