--- a/views/partial/menu.html
+++ b/views/partial/menu.html
@@ -1,4 +1,4 @@
-<div class="one-quarter column">
+<div class="one-quarter grid-column">
   <nav class="menu">
     <a class="menu-item {% if section == 'colors' %}selected{% endif %}" href="/docs/colors">Colors</a>
     <a class="menu-item {% if section == 'buttons' %}selected{% endif %}" href="/docs/buttons">Buttons</a>
@@ -10,5 +10,6 @@
     <a class="menu-item {% if section == 'navigation' %}selected{% endif %}" href="/docs/navigation">Navigation</a>
     <a class="menu-item {% if section == 'tables' %}selected{% endif %}" href="/docs/tables">Tables</a>
     <a class="menu-item {% if section == 'typography' %}selected{% endif %}" href="/docs/typography">Typography</a>
+    <a class="menu-item {% if section == 'grid' %}selected{% endif %}" href="/docs/grid">Grid</a>
   </nav>
 </div>
