--- a/views/layout/default.html
+++ b/views/layout/default.html
@@ -7,7 +7,7 @@
     {% include "layout/header.html" %}
 
     <div class="container">
-      <div class="row">
+      <div class="grid-row">
         {% block side %}{% endblock %}
         {% block main %}{% endblock %}
       </div>
