Add color helper and latest build

--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -72,6 +72,7 @@ This library is divided in the following sections:
 @import "helpers/align";
 @import "helpers/avatar";
 @import "helpers/clearfix";
+@import "helpers/colors";
 @import "helpers/cursor";
 @import "helpers/disabled";
 @import "helpers/float";
