Add new color helper for text secondary dark

--- a/sass/styleguide/helpers/_colors.scss
+++ b/sass/styleguide/helpers/_colors.scss
@@ -1,3 +1,7 @@
 .color-error {
     color: color($name: "error");
 }
+
+.color-text-sd {
+    color: color($name: "text", $variant: "secondary", $hue: "dark");
+}
