--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -26,7 +26,7 @@ This library is divided in the following sections:
 
 /* 1. Reset */
 
-//@import "base/normalize";
+@import "base/normalize";
 
 /* 2. Core */
 
