--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -55,6 +55,7 @@ This library is divided in the following sections:
 @import "objects/icons";
 @import "objects/justify-columns";
 @import "objects/media";
+@import "objects/lists";
 @import "objects/nav";
 @import "objects/panel";
 //@import "objects/pagination";
