--- a/views/partial/menu.html
+++ b/views/partial/menu.html
@@ -6,6 +6,7 @@
     <a class="menu-item {% if section == 'data-visualization' %}selected{% endif %}" href="/docs/data-visualization">Data visualization</a>
     <a class="menu-item {% if section == 'icons' %}selected{% endif %}" href="/docs/icons">Icons</a>
     <a class="menu-item {% if section == 'forms' %}selected{% endif %}" href="/docs/forms">Forms</a>
+    <a class="menu-item {% if section == 'lists' %}selected{% endif %}" href="/docs/lists">Lists</a>
     <a class="menu-item {% if section == 'miscelanea' %}selected{% endif %}" href="/docs/miscelanea">Miscelanea</a>
     <a class="menu-item {% if section == 'navigation' %}selected{% endif %}" href="/docs/navigation">Navigation</a>
     <a class="menu-item {% if section == 'tables' %}selected{% endif %}" href="/docs/tables">Tables</a>
