Support anchor inside list items in simple list

--- a/views/components/lists/simple-list.html
+++ b/views/components/lists/simple-list.html
@@ -1,6 +1,6 @@
 <ul class="sb-list one-quarter list-example">
   <li class="sb-list-item">Simple list</li>
-  <li class="sb-list-item">Item 1</li>
+  <li class="sb-list-item"><a href="">Item 1 (anchor)</a></li>
   <li class="sb-list-item">Item 2</li>
   <li class="sb-list-item">Item 3</li>
 </ul>
