--- a/sass/styleguide/objects/_lists.scss
+++ b/sass/styleguide/objects/_lists.scss
@@ -27,4 +27,10 @@
         border-bottom: 1px solid color($name: "socialbro");
         border-top: 1px solid color($name: "socialbro");
     }
+
+    & > a {
+        color: inherit;
+        display: block;
+        text-decoration: none;
+    }
 }
