--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -89,4 +89,25 @@
     </svg>
     <span class="icon-container-name">heart</span>
   </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-tweet-editor">
+      <use xlink:href="/svg-defs.svg#icon-tweet-editor"></use>
+    </svg>
+    <span class="icon-container-name">tweet-editor</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-rocket">
+      <use xlink:href="/svg-defs.svg#icon-rocket"></use>
+    </svg>
+    <span class="icon-container-name">rocket</span>
+  </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-lifevest">
+      <use xlink:href="/svg-defs.svg#icon-lifevest"></use>
+    </svg>
+    <span class="icon-container-name">lifevest</span>
+  </div>
 </div>
