Add new gift icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -110,4 +110,11 @@
     </svg>
     <span class="icon-container-name">lifevest</span>
   </div>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-gift">
+      <use xlink:href="/svg-defs.svg#icon-gift"></use>
+    </svg>
+    <span class="icon-container-name">gift</span>
+  </div>
 </div>
