Add title secondary color helper

--- a/sass/styleguide/helpers/_colors.scss
+++ b/sass/styleguide/helpers/_colors.scss
@@ -9,3 +9,7 @@
 .color-titles {
     color: color($name: "titles");
 }
+
+.color-titles-secondary {
+    color: color($name: "titles", $variant: "secondary");
+}
