Rename color helpers

--- a/sass/styleguide/helpers/_colors.scss
+++ b/sass/styleguide/helpers/_colors.scss
@@ -10,6 +10,6 @@
     color: color($name: "titles");
 }
 
-.color-titles-secondary {
+.color-titles-s {
     color: color($name: "titles", $variant: "secondary");
 }
