--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1,118 +1,118 @@
 <div class="icons-holder clearfix">
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-socialbro">
+    <svg class="icon-socialbro">
       <use xlink:href="/svg-defs.svg#icon-socialbro"></use>
     </svg>
     <span class="icon-container-name">socialbro</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-twitter">
+    <svg class="icon-twitter">
       <use xlink:href="/svg-defs.svg#icon-twitter"></use>
     </svg>
     <span class="icon-container-name">twitter</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-triangle-down">
+    <svg class="icon-triangle-down">
       <use xlink:href="/svg-defs.svg#icon-triangle-down"></use>
     </svg>
     <span class="icon-container-name">triangle-down</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-trash">
+    <svg class="icon-trash">
       <use xlink:href="/svg-defs.svg#icon-trash"></use>
     </svg>
     <span class="icon-container-name">trash</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-credit-card">
+    <svg class="icon-credit-card">
       <use xlink:href="/svg-defs.svg#icon-credit-card"></use>
     </svg>
     <span class="icon-container-name">credit-card</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-headphones">
+    <svg class="icon-headphones">
       <use xlink:href="/svg-defs.svg#icon-headphones"></use>
     </svg>
     <span class="icon-container-name">headphones</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-open-envelope">
+    <svg class="icon-open-envelope">
       <use xlink:href="/svg-defs.svg#icon-open-envelope"></use>
     </svg>
     <span class="icon-container-name">open-envelope</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-plugin">
+    <svg class="icon-plugin">
       <use xlink:href="/svg-defs.svg#icon-plugin"></use>
     </svg>
     <span class="icon-container-name">plugin</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-tools">
+    <svg class="icon-tools">
       <use xlink:href="/svg-defs.svg#icon-tools"></use>
     </svg>
     <span class="icon-container-name">tools</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-user">
+    <svg class="icon-user">
       <use xlink:href="/svg-defs.svg#icon-user"></use>
     </svg>
     <span class="icon-container-name">user</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-nut">
+    <svg class="icon-nut">
       <use xlink:href="/svg-defs.svg#icon-nut"></use>
     </svg>
     <span class="icon-container-name">nut</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-bell">
+    <svg class="icon-bell">
       <use xlink:href="/svg-defs.svg#icon-bell"></use>
     </svg>
     <span class="icon-container-name">bell</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-heart">
+    <svg class="icon-heart">
       <use xlink:href="/svg-defs.svg#icon-heart"></use>
     </svg>
     <span class="icon-container-name">heart</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-tweet-editor">
+    <svg class="icon-tweet-editor">
       <use xlink:href="/svg-defs.svg#icon-tweet-editor"></use>
     </svg>
     <span class="icon-container-name">tweet-editor</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-rocket">
+    <svg class="icon-rocket">
       <use xlink:href="/svg-defs.svg#icon-rocket"></use>
     </svg>
     <span class="icon-container-name">rocket</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-lifevest">
+    <svg class="icon-lifevest">
       <use xlink:href="/svg-defs.svg#icon-lifevest"></use>
     </svg>
     <span class="icon-container-name">lifevest</span>
   </div>
 
   <div class="icon-container">
-    <svg viewBox="0 0 100 100" class="icon-gift">
+    <svg class="icon-gift">
       <use xlink:href="/svg-defs.svg#icon-gift"></use>
     </svg>
     <span class="icon-container-name">gift</span>
