--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -117,4 +117,11 @@
     </svg>
     <span class="icon-container-name">gift</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-nuts">
+      <use xlink:href="/svg-defs.svg#icon-nuts"></use>
+    </svg>
+    <span class="icon-container-name">nuts</span>
+  </div>
 </div>
