--- a/views/components/grid/grid.html
+++ b/views/components/grid/grid.html
@@ -1,19 +1,12 @@
 <div class="grid-row">
-  <div class="grid-column">
-    <p>I'm a column. Full by default</p>
-  </div>
-  <div class="grid-column one-third">
-    <p>Boring one-third column</p>
-  </div>
-  <div class="grid-column two-thirds">
-    <p>Funny column two-third of width</p>
-  </div>
+  <div class="grid-column"><p>I'm a column. Full by default</p></div>
 </div>
-<div class="grid-row">
-  <div class="grid-column one-third">
-    <p>Boring one-third column</p>
-  </div>
-  <div class="grid-column one-third">
-    <p>Boring one-third column</p>
-  </div>
+<div class="grid-row narrow">
+  <div class="grid-column one-third"><p>One third. Narrow gutter</p></div>
+  <div class="grid-column one-third"><p>One third of width</p></div>
+  <div class="grid-column one-third"><p>One third column</p></div>
+</div>
+<div class="grid-row wide">
+  <div class="grid-column one-half"><p>One half column wide gutter</p></div>
+  <div class="grid-column one-half"><p>One half column wide gutter</p></div>
 </div>
