--- a/sass/docs/_grid.scss
+++ b/sass/docs/_grid.scss
@@ -1,8 +1,11 @@
 .docs-sample .grid-row {
-    margin-bottom: 2rem;
+    &:not(:last-child) {
+        margin-bottom: 1rem;
+    }
 }
 
 .docs-sample .grid-column > * {
-    background: #eee;
+    background: color($name: "succeed", $variant: "tertiary", $hue: "light");
+    border: 1px solid color($name: "succeed", $variant: "tertiary", $hue: "dark");
     padding: 1rem;
 }
