--- a/sass/styleguide/objects/_lists.scss
+++ b/sass/styleguide/objects/_lists.scss
@@ -1,10 +1,12 @@
-.sb-list {
+// A selectable list mainly used inside menus
+.menu-list {
     display: block;
     list-style: none;
     margin: 0;
-    padding: .5rem 0;
+    padding: 1rem 0;
+    white-space: nowrap;
 
-    &.non-selectable .sb-list-item {
+    &.non-selectable .menu-list-item {
         cursor: normal;
 
         &:hover {
@@ -15,22 +17,32 @@
     }
 }
 
-.sb-list-item {
+.menu-list-item {
     border-bottom: 1px solid transparent;
     border-top: 1px solid transparent;
+    color: color($name: "text", $hue: "dark");
     cursor: pointer;
-    line-height: 2;
-    padding: 0 1.5rem;
+    display: block;
+    line-height: 1.5;
+    padding: .3rem 1.5rem;
 
     &:hover {
         background-color: color($name: "socialbro", $variant: "tertiary");
         border-bottom: 1px solid color($name: "socialbro");
         border-top: 1px solid color($name: "socialbro");
+        text-decoration: none;
     }
 
     & > a {
         color: inherit;
         display: block;
         text-decoration: none;
+    }
+
+    & > [class^="icon"] {
+        height: 1.5em;
+        margin-right: .5rem;
+        vertical-align: bottom;
+        width: 1.3em;
     }
 }
